--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <artifactId>maven-plugin-parent</artifactId>
     <groupId>org.apache.maven.plugins</groupId>
-    <version>2.0-beta-1-SNAPSHOT</version>
+    <version>2.0-beta-1</version>
   </parent>
   <artifactId>maven-project-info-reports-plugin</artifactId>
   <version>2.0-alpha-2-SNAPSHOT</version>
@@ -34,12 +34,12 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-model</artifactId>
-      <version>2.0-beta-1-SNAPSHOT</version>
+      <version>2.0-beta-1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.reporting</groupId>
       <artifactId>maven-reporting-impl</artifactId>
-      <version>2.0-beta-1-SNAPSHOT</version>
+      <version>2.0-beta-1</version>
     </dependency>
     <dependency>
       <groupId>commons-validator</groupId>
