PR: MNG-953 Submitted by: Johnny R. Ruiz III Reviewed by:  Vincent Siveton Added how to and sample reports for the project info reports plugin
git-svn-id: https://svn.apache.org/repos/asf/maven/components/trunk/maven-plugins@291920 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
       <timezone>-5</timezone>
     </developer>
   </developers>
+  <contributors>
+    <contributor>
+      <name>Johnny R. Ruiz III</name>
+      <email>jruiz@exist.com</email>
+    </contributor>
+  </contributors>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
