--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>maven-plugin-parent</artifactId>
     <groupId>org.apache.maven.plugins</groupId>
-    <version>2.0-beta-4-SNAPSHOT</version>
+    <version>2.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>maven-project-info-reports-plugin</artifactId>
@@ -11,7 +11,7 @@
   <version>2.0-beta-2-SNAPSHOT</version>
   <inceptionYear>2005</inceptionYear>
   <prerequisites>
-    <maven>2.0-beta-4-SNAPSHOT</maven>
+    <maven>2.0</maven>
   </prerequisites>
   <developers>
     <developer>
@@ -50,7 +50,7 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-model</artifactId>
-      <version>2.0-beta-4-SNAPSHOT</version>
+      <version>2.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
@@ -60,7 +60,7 @@
     <dependency>
       <groupId>org.apache.maven.reporting</groupId>
       <artifactId>maven-reporting-impl</artifactId>
-      <version>2.0-beta-4-SNAPSHOT</version>
+      <version>2.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
