--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,8 @@
   <artifactId>maven-project-info-reports-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Project Info Reports Plugin</name>
-  <version>2.0-beta-2-SNAPSHOT</version>
+  <version>2.0-beta-2</version>
   <inceptionYear>2005</inceptionYear>
-  <prerequisites>
-    <maven>2.0</maven>
-  </prerequisites>
   <developers>
     <developer>
       <id>vsiveton</id>
@@ -31,11 +28,30 @@
       <email>jruiz@exist.com</email>
     </contributor>
   </contributors>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-api</artifactId>
       <version>1.0-alpha-2</version>
+    </dependency>
+    <dependency>
+      <groupId>httpunit</groupId>
+      <artifactId>httpunit</artifactId>
+      <version>1.6</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>commons-validator</groupId>
@@ -56,6 +72,12 @@
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-manager-plexus</artifactId>
       <version>1.0-alpha-2</version>
+    </dependency>
+    <dependency>
+      <groupId>plexus</groupId>
+      <artifactId>plexus-i18n</artifactId>
+      <version>1.0-beta-5</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.reporting</groupId>
@@ -82,29 +104,5 @@
       <artifactId>maven-scm-provider-cvs</artifactId>
       <version>1.0-alpha-2</version>
     </dependency>
-    <dependency>
-      <groupId>httpunit</groupId>
-      <artifactId>httpunit</artifactId>
-      <version>1.6</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>plexus</groupId>
-      <artifactId>plexus-i18n</artifactId>
-      <version>1.0-beta-5</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
-  <!-- for reactor ordering -->
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration><skip>true</skip></configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-site-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
 </project>
