--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>maven-project-info-reports-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Project Info Reports Plugin</name>
-  <version>2.0-beta-2</version>
+  <version>2.0-beta-3-SNAPSHOT</version>
   <inceptionYear>2005</inceptionYear>
   <developers>
     <developer>
