--- a/pom.xml
+++ b/pom.xml
@@ -103,5 +103,10 @@
       <artifactId>maven-scm-provider-cvs</artifactId>
       <version>1.0-alpha-2</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-settings</artifactId>
+      <version>2.0</version>
+    </dependency>
   </dependencies>
 </project>
