--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -120,7 +120,8 @@ report.issuetracking.overview.title=Overview
 report.issuetracking.jira.intro=This project uses {Jira, http://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
 report.issuetracking.bugzilla.intro=This project uses {Bugzilla, http://www.bugzilla.org/}.
 report.issuetracking.scarab.intro=This project uses {Scarab, http://scarab.tigris.org/}.
-report.issuetracking.general.intro=This project uses a Issue Management System to manage its issues.
+report.issuetracking.general.intro=This project uses an Issue Management System to manage its issues.
+report.issuetracking.custom.intro=This project uses %issueManagementSystem% to manage its issues.  
 report.issuetracking.title=Issue Tracking
 report.issuetracking.intro=Issues, bugs, and feature requests should be submitted to the following issue tracking system for this project.
 
