--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -24,6 +24,12 @@ report.dependencies.column.artifactId=ArtifactId
 report.dependencies.column.version=Version
 report.dependencies.column.description=Description
 report.dependencies.column.url=URL
+report.dependencies.column.optional=Optional
+
+report.dependencies.intro.compile=The following is a list of runtime dependencies for this project. These dependencies are required to compile and run the application:
+report.dependencies.intro.test=The following is a list of test dependencies for this project. These dependencies are only required to compile and run unit tests for the application:
+report.dependencies.intro.provided=The following is a list of provided dependencies for this project. These dependencies are required to compile the application, but should be provided by default when using the library:
+report.dependencies.intro.system=The following is a list of system dependencies for this project. These dependencies are required to compile the application:
 
 report.transitivedependencies.title=Project Transitive Dependencies
 report.transitivedependencies.nolist=No transitive dependencies are required for this project.
