PR: MPIR-10 Add Dependency Convergence (w/Ready for Release indicator) report. Submitted by: Joakim Erdfelt Reviewed by: Fabrizio Giustina
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@359564 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -155,3 +155,22 @@ report.license.nolicense=No project license is defined for this project.
 report.license.title=Project License
 report.license.overview.title=Overview
 report.license.overview.intro=Typically the licenses listed for the project are that of the project itself, and not of dependencies.
+
+report.dependency-convergence.name=Dependency Convergence
+report.dependency-convergence.description=This document presents the convergence of dependency versions across the entire project, and its sub modules.
+report.dependency-convergence.title=Reactor Dependency Convergence
+report.dependency-convergence.legend=Legend
+report.dependency-convergence.legend.shared=All projects share one version of the dependency.
+report.dependency-convergence.legend.different=At least one project has a differing version of the dependency.
+report.dependency-convergence.stats.caption=Statistics
+report.dependency-convergence.stats.subprojects=Number of sub-projects
+report.dependency-convergence.stats.dependencies=Number of dependencies (NOD)
+report.dependency-convergence.stats.artifacts=Number of unique artifacts (NOA)
+report.dependency-convergence.stats.snapshots=Number of SNAPSHOT artifacts (NOS)
+report.dependency-convergence.stats.convergence=Convergence (NOD/NOA)
+report.dependency-convergence.stats.readyrelease=Ready for Release (100% Convergence and no SNAPSHOTS)
+report.dependency-convergence.stats.readyrelease.success=Success
+report.dependency-convergence.stats.readyrelease.error=Error
+report.dependency-convergence.stats.readyrelease.error.convergence=You do not have 100% convergence.
+report.dependency-convergence.stats.readyrelease.error.snapshots=You have SNAPSHOT dependencies.
+report.dependency-convergence.convergence.caption=Dependencies used in sub-projects
