Fix typo in description (runtime -> compile)
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@371103 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -26,7 +26,8 @@ report.dependencies.column.description=Description
 report.dependencies.column.url=URL
 report.dependencies.column.optional=Optional
 
-report.dependencies.intro.compile=The following is a list of runtime dependencies for this project. These dependencies are required to compile and run the application:
+report.dependencies.intro.runtime=The following is a list of runtime dependencies for this project. These dependencies are required to run the application:
+report.dependencies.intro.compile=The following is a list of compile dependencies for this project. These dependencies are required to compile and run the application:
 report.dependencies.intro.test=The following is a list of test dependencies for this project. These dependencies are only required to compile and run unit tests for the application:
 report.dependencies.intro.provided=The following is a list of provided dependencies for this project. These dependencies are required to compile the application, but should be provided by default when using the library:
 report.dependencies.intro.system=The following is a list of system dependencies for this project. These dependencies are required to compile the application:
