--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -175,3 +175,21 @@ report.dependency-convergence.stats.readyrelease.error=Error
 report.dependency-convergence.stats.readyrelease.error.convergence=You do not have 100% convergence.
 report.dependency-convergence.stats.readyrelease.error.snapshots=You have SNAPSHOT dependencies.
 report.dependency-convergence.convergence.caption=Dependencies used in sub-projects
+
+report.summary.title=Project Summary
+report.summary.name=Project Summary
+report.summary.description=This document lists other related information of this project
+report.summary.field=Field
+report.summary.value=Value
+report.summary.general.title=Project Information
+report.summary.general.name=Name
+report.summary.general.description=Description
+report.summary.general.homepage=Homepage
+report.summary.build.title=Build Information
+report.summary.build.groupid=GroupId
+report.summary.build.artifactid=ArtifactId
+report.summary.build.version=Version
+report.summary.build.type=Type
+report.summary.organization.title=Project Organization
+report.summary.organization.name=Name
+report.summary.organization.url=URL
