--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -176,6 +176,13 @@ report.dependency-convergence.stats.readyrelease.error.convergence=You do not ha
 report.dependency-convergence.stats.readyrelease.error.snapshots=You have SNAPSHOT dependencies.
 report.dependency-convergence.convergence.caption=Dependencies used in sub-projects
 
+report.dependencies.graph.title=Project Dependency Graph
+report.dependencies.graph.tree.title=Dependency Tree
+report.dependencies.graph.tables.title=Dependency Listings
+report.dependencies.graph.tables.column.groupid=GroupId
+report.dependencies.graph.tables.column.artifactid=ArtifactId
+report.dependencies.graph.tables.column.version=Version
+
 report.summary.title=Project Summary
 report.summary.name=Project Summary
 report.summary.description=This document lists other related information of this project
