--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -182,6 +182,9 @@ report.dependencies.graph.tables.title=Dependency Listings
 report.dependencies.graph.tables.column.groupid=GroupId
 report.dependencies.graph.tables.column.artifactid=ArtifactId
 report.dependencies.graph.tables.column.version=Version
+report.dependencies.graph.tables.column.comments=Comments
+report.dependencies.graph.tables.attached=Attached
+report.dependencies.graph.tables.notAttached=Not attached
 
 report.summary.title=Project Summary
 report.summary.name=Project Summary
