--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-api</artifactId>
-      <version>1.0-alpha-2</version>
+      <version>1.0-beta-2</version>
     </dependency>
     <dependency>
       <groupId>httpunit</groupId>
@@ -61,7 +61,7 @@
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-perforce</artifactId>
-      <version>1.0-alpha-2</version>
+      <version>1.0-beta-2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
@@ -71,7 +71,7 @@
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-manager-plexus</artifactId>
-      <version>1.0-alpha-2</version>
+      <version>1.0-beta-2</version>
     </dependency>
     <dependency>
       <groupId>plexus</groupId>
@@ -86,22 +86,22 @@
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-clearcase</artifactId>
-      <version>1.0-alpha-2</version>
+      <version>1.0-beta-2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-starteam</artifactId>
-      <version>1.0-alpha-2</version>
+      <version>1.0-beta-2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-svn</artifactId>
-      <version>1.0-alpha-2</version>
+      <version>1.0-beta-2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-cvs</artifactId>
-      <version>1.0-alpha-2</version>
+      <version>1.0-beta-2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
