--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@ under the License.
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.2</version>
         <configuration>
           <excludes>
             <exclude>**/Abstract*TestCase.java</exclude>
