o Spell JIRA with capital letters.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@556753 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -112,7 +112,7 @@ report.issuetracking.custom.intro                                  = This projec
 report.issuetracking.description                                   = This is a link to the issue management system for this project. Issues (bugs, features, change requests) can be created and queried using this link.
 report.issuetracking.general.intro                                 = This project uses an Issue Management System to manage its issues.
 report.issuetracking.intro                                         = Issues, bugs, and feature requests should be submitted to the following issue tracking system for this project.
-report.issuetracking.jira.intro                                    = This project uses {Jira, http://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
+report.issuetracking.jira.intro                                    = This project uses {JIRA, http://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
 report.issuetracking.name                                          = Issue Tracking
 report.issuetracking.noissueManagement                             = No issue management system is defined. Please check back at a later date.
 report.issuetracking.overview.title                                = Overview
