--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,6 @@ under the License.
       <email>jruiz@exist.com</email>
     </contributor>
   </contributors>
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.2</version>
-      </plugin>
-    </plugins>
-  </build>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
@@ -166,6 +158,12 @@ under the License.
       <groupId>org.apache.maven.shared</groupId>
       <artifactId>maven-plugin-testing-harness</artifactId>
       <version>1.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>1.4.3</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
