o Lock down surefire version to avoid plexus problems (CI build failures).
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@569826 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@ under the License.
       <email>jruiz@exist.com</email>
     </contributor>
   </contributors>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.3</version>
+      </plugin>
+    </plugins>
+  </build>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
