o bumped to the scm release 1.0
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@573226 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,7 @@ under the License.
   </dependencies>
   <properties>
     <wagon.version>1.0-beta-2</wagon.version>
-    <scm.version>1.0-beta-4</scm.version>
+    <scm.version>1.0</scm.version>
   </properties>
 </project>
 
