o bumped to the maven-dependency-tree release 1.0
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@573229 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@ under the License.
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
       <artifactId>maven-dependency-tree</artifactId>
-      <version>1.0-alpha-2</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.wagon</groupId>
