o Update to doxia 1.0-alpha-10-SNAPSHOT.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@586895 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -276,8 +276,8 @@ under the License.
     </dependency>
   </dependencies>
   <properties>
-    <doxia.version>1.0-alpha-9</doxia.version>
-    <doxia-sitetools.version>1.0-alpha-9</doxia-sitetools.version>
+    <doxia.version>1.0-alpha-10-SNAPSHOT</doxia.version>
+    <doxia-sitetools.version>1.0-alpha-10-SNAPSHOT</doxia-sitetools.version>
     <wagon.version>1.0-beta-2</wagon.version>
     <scm.version>1.0</scm.version>
   </properties>
