o added Juven Xu as contributor for the Chinese translation
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@600137 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@ under the License.
       <name>Johnny R. Ruiz III</name>
       <email>jruiz@exist.com</email>
     </contributor>
+    <contributor>
+      <name>Juven Xu</name>
+      <email>juvenshun@gmail.com</email>
+      <roles>
+        <role>Chinese translator</role>
+      </roles>
+    </contributor>
   </contributors>
 
   <scm>
