--- a/pom.xml
+++ b/pom.xml
@@ -165,12 +165,12 @@ under the License.
     <dependency>
       <groupId>org.apache.maven.wagon</groupId>
       <artifactId>wagon-provider-api</artifactId>
-      <version>${wagon.version}</version>
+      <version>${wagonVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.wagon</groupId>
       <artifactId>wagon-ssh</artifactId>
-      <version>${wagon.version}</version>
+      <version>${wagonVersion}</version>
       <exclusions>
         <!-- Using org.codehaus.plexus:plexus-utils instead of -->
         <exclusion>
@@ -182,73 +182,73 @@ under the License.
     <dependency>
       <groupId>org.apache.maven.wagon</groupId>
       <artifactId>wagon-file</artifactId>
-      <version>${wagon.version}</version>
+      <version>${wagonVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.wagon</groupId>
       <artifactId>wagon-http-lightweight</artifactId>
-      <version>${wagon.version}</version>
+      <version>${wagonVersion}</version>
     </dependency>
 
     <!-- scm -->
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-api</artifactId>
-      <version>${scm.version}</version>
+      <version>${scmVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-manager-plexus</artifactId>
-      <version>${scm.version}</version>
+      <version>${scmVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-perforce</artifactId>
-      <version>${scm.version}</version>
+      <version>${scmVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-starteam</artifactId>
-      <version>${scm.version}</version>
+      <version>${scmVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-svn-commons</artifactId>
-      <version>${scm.version}</version>
+      <version>${scmVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-cvs-commons</artifactId>
-      <version>${scm.version}</version>
+      <version>${scmVersion}</version>
     </dependency>
 
     <!-- Doxia -->
     <dependency>
       <groupId>org.apache.maven.doxia</groupId>
       <artifactId>doxia-core</artifactId>
-      <version>${doxia.version}</version>
+      <version>${doxiaVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.doxia</groupId>
       <artifactId>doxia-module-xhtml</artifactId>
-      <version>${doxia.version}</version>
+      <version>${doxiaVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.doxia</groupId>
       <artifactId>doxia-sink-api</artifactId>
-      <version>${doxia.version}</version>
+      <version>${doxiaVersion}</version>
     </dependency>
 
     <!-- Doxia-sitetools -->
     <dependency>
       <groupId>org.apache.maven.doxia</groupId>
       <artifactId>doxia-decoration-model</artifactId>
-      <version>${doxia-sitetools.version}</version>
+      <version>${doxia-sitetoolsVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.doxia</groupId>
       <artifactId>doxia-site-renderer</artifactId>
-      <version>${doxia-sitetools.version}</version>
+      <version>${doxia-sitetoolsVersion}</version>
       <exclusions>
         <exclusion>
           <groupId>org.codehaus.plexus</groupId>
@@ -300,9 +300,9 @@ under the License.
   </dependencies>
 
   <properties>
-    <doxia.version>1.0-alpha-10</doxia.version>
-    <doxia-sitetools.version>1.0-alpha-10</doxia-sitetools.version>
-    <wagon.version>1.0-beta-2</wagon.version>
-    <scm.version>1.0</scm.version>
+    <doxiaVersion>1.0-alpha-10</doxiaVersion>
+    <doxia-sitetoolsVersion>1.0-alpha-10</doxia-sitetoolsVersion>
+    <wagonVersion>1.0-beta-2</wagonVersion>
+    <scmVersion>1.0</scmVersion>
   </properties>
 </project>
