MPIR-83: Include reports for DependencyManagement and PluginManagement Submitted by: Nick Stolwijk Reviewed by: Vincent Siveton
o patch applied but renamed goals to be consistent
o renamed also the values of the keys report.dependencyManagement.name and report.pluginManagement.name into "mngt" (for the side bar)
o added @since in the javadoc
o updated links in doc

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@616568 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -216,3 +216,21 @@ report.team-list.title                                             = Team list
 report.transitivedependencies.intro                                = The following is a list of transitive dependencies for this project. Transitive dependencies are the dependencies of the project dependencies.
 report.transitivedependencies.nolist                               = No transitive dependencies are required for this project.
 report.transitivedependencies.title                                = Project Transitive Dependencies
+report.dependencyManagement.name                                   = Dependency Mngt
+report.dependencyManagement.description                            = description
+report.dependencyManagement.title                                  = Project Dependency Management
+report.dependencyManagement.nolist                                 = There are no dependencies in the DependencyManagement of this project.
+report.dependencyManagement.column.groupId                         = GroupId
+report.dependencyManagement.column.artifactId                      = ArtifactId
+report.dependencyManagement.column.version                         = Version
+report.dependencyManagement.column.classifier                      = Classifier
+report.dependencyManagement.column.type                            = Type
+report.dependencyManagement.intro.compile                          = The following is a list of compile dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile and run the submodule:
+report.dependencyManagement.intro.provided                         = The following is a list of provided dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile the submodule, but should be provided by default when using the library:
+report.dependencyManagement.intro.runtime                          = The following is a list of runtime dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to run the submodule:
+report.dependencyManagement.intro.system                           = The following is a list of system dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile the submodule:
+report.dependencyManagement.intro.test                             = The following is a list of test dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile and run unit tests for the submodule:
+report.pluginManagement.name                                       = Plugin Mngt
+report.pluginManagement.description                                = description
+report.pluginManagement.title                                      = Project Plugin Management
+report.pluginManagement.nolist                                     = There are no plugins in the PluginManagement of this project.
