MPIR-84: StringIndexOutOfBoundsException when ML archive dont finish with a /
o fixed and add a test case

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@628688 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -303,6 +303,11 @@ under the License.
       <version>1.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>junit-addons</groupId>
+      <artifactId>junit-addons</artifactId>
+      <version>1.4</version>
+    </dependency>
   </dependencies>
 
   <properties>
