--- a/pom.xml
+++ b/pom.xml
@@ -316,4 +316,32 @@ under the License.
     <wagonVersion>1.0-beta-2</wagonVersion>
     <scmVersion>1.0</scmVersion>
   </properties>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>l10n-maven-plugin</artifactId>
+        <version>1.0-alpha-1</version>
+        <configuration>
+          <locales>
+            <locale>cs</locale>
+            <locale>de</locale>
+            <locale>es</locale>
+            <locale>fr</locale>
+            <locale>hu</locale>
+            <locale>it</locale>
+            <locale>ja</locale>
+            <locale>ko</locale>
+            <locale>nl</locale>
+            <locale>no</locale>
+            <locale>pl</locale>
+            <locale>pt</locale>
+            <locale>sk</locale>
+            <locale>zh</locale>
+          </locales>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
