o Fix locale codes for l10n report.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@638579 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -336,9 +336,9 @@ under the License.
             <locale>nl</locale>
             <locale>no</locale>
             <locale>pl</locale>
-            <locale>pt</locale>
+            <locale>pt_BR</locale>
             <locale>sk</locale>
-            <locale>zh</locale>
+            <locale>zh_CN</locale>
           </locales>
         </configuration>
       </plugin>
