o Add a proper name and description for report.dependencyManagement and report.pluginManagement. o Fix typos.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@640193 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -144,8 +144,8 @@ report.scm.cvs.intro                                               = This projec
 report.scm.description                                             = This is a link to the online source repository that can be viewed via a web browser.
 report.scm.devaccess.clearcase.intro                               = Only project developers can access the ClearCase tree via this method. Substitute username with the proper value.
 report.scm.devaccess.cvs.intro                                     = Only project developers can access the CVS tree via this method. Substitute username with the proper value.
-report.scm.devaccess.general.intro                                 = Refer to the documentation of the SCM used for more information about developer checked out. The connection url is:
-report.scm.devaccess.perforce.intro                                = Only project developers can access the Perforce tree via this method. Substitute username and password with the proper value.
+report.scm.devaccess.general.intro                                 = Refer to the documentation of the SCM used for more information about developer check out. The connection url is:
+report.scm.devaccess.perforce.intro                                = Only project developers can access the Perforce tree via this method. Substitute username and password with the proper values.
 report.scm.devaccess.starteam.intro                                = Only project developers can access the Starteam tree via this method. Substitute username with the proper value.
 report.scm.devaccess.svn.intro1.https                              = Everyone can access the Subversion repository via HTTPS, but Committers must checkout the Subversion repository via HTTPS.
 report.scm.devaccess.svn.intro1.other                              = Committers must checkout the Subversion repository.
@@ -216,8 +216,8 @@ report.team-list.title                                             = Team list
 report.transitivedependencies.intro                                = The following is a list of transitive dependencies for this project. Transitive dependencies are the dependencies of the project dependencies.
 report.transitivedependencies.nolist                               = No transitive dependencies are required for this project.
 report.transitivedependencies.title                                = Project Transitive Dependencies
-report.dependencyManagement.name                                   = Dependency Mngt
-report.dependencyManagement.description                            = description
+report.dependencyManagement.name                                   = Dependency Management
+report.dependencyManagement.description                            = This document lists the dependencies that are defined through dependencyManagement.
 report.dependencyManagement.title                                  = Project Dependency Management
 report.dependencyManagement.nolist                                 = There are no dependencies in the DependencyManagement of this project.
 report.dependencyManagement.column.groupId                         = GroupId
@@ -230,7 +230,7 @@ report.dependencyManagement.intro.provided                         = The followi
 report.dependencyManagement.intro.runtime                          = The following is a list of runtime dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to run the submodule:
 report.dependencyManagement.intro.system                           = The following is a list of system dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile the submodule:
 report.dependencyManagement.intro.test                             = The following is a list of test dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile and run unit tests for the submodule:
-report.pluginManagement.name                                       = Plugin Mngt
-report.pluginManagement.description                                = description
+report.pluginManagement.name                                       = Plugin Management
+report.pluginManagement.description                                = This document lists the plugins that are defined through pluginManagement. 
 report.pluginManagement.title                                      = Project Plugin Management
 report.pluginManagement.nolist                                     = There are no plugins in the PluginManagement of this project.
