[MSITE-292] Swedish translation for the site
o Add it to the l10n report.

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@640201 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -331,6 +331,7 @@ under the License.
             <locale>pl</locale>
             <locale>pt_BR</locale>
             <locale>sk</locale>
+            <locale>sv</locale>
             <locale>zh_CN</locale>
           </locales>
         </configuration>
