[MSITE-251] tr locale support Submitted by: gulcan yalcinkaya Reviewed by: Dennis Lundberg
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@640226 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -332,6 +332,7 @@ under the License.
             <locale>pt_BR</locale>
             <locale>sk</locale>
             <locale>sv</locale>
+            <locale>tr</locale>
             <locale>zh_CN</locale>
           </locales>
         </configuration>
