[MPIR-89] Bad spelling in Project Information => Overview => Dependencies
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@646059 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -44,7 +44,7 @@ report.dependencies.column.optional                                = Optional
 report.dependencies.column.type                                    = Type
 report.dependencies.column.url                                     = URL
 report.dependencies.column.version                                 = Version
-report.dependencies.description                                    = This document lists the projects dependencies and provides information on each dependency.
+report.dependencies.description                                    = This document lists the project's dependencies and provides information on each dependency.
 report.dependencies.file.details.column.classes                    = Classes
 report.dependencies.file.details.column.debug                      = Debug
 report.dependencies.file.details.column.entries                    = Entries
